After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 757911 - NetworkManagerUtils: fix build with toolchains not exporting CLOCK_BOOTTIME (redux)
NetworkManagerUtils: fix build with toolchains not exporting CLOCK_BOOTTIME (...
Status: RESOLVED FIXED
Product: NetworkManager
Classification: Platform
Component: general
1.0.x
Other Linux
: Normal normal
: ---
Assigned To: NetworkManager maintainer(s)
NetworkManager maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2015-11-10 19:27 UTC by Glenn Washburn
Modified: 2015-11-24 19:48 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Add needed CLOCK_BOOTTIME define (1.01 KB, patch)
2015-11-10 19:27 UTC, Glenn Washburn
none Details | Review

Description Glenn Washburn 2015-11-10 19:27:23 UTC
Created attachment 315211 [details] [review]
Add needed CLOCK_BOOTTIME define

The fix in https://bugzilla.gnome.org/show_bug.cgi?id=734599 wasn't complete for my centos6 toolchain.  Attached is a patch that declares the macros in some other needed places.  Alternatively, it looks like CLOCK_BOOTTIME is defined in <linux/time.h>, which I guess isn't included.  I haven't tried using that header though as its linux specific.
Comment 1 Thomas Haller 2015-11-13 16:30:03 UTC
Merged a modified version:

master: http://cgit.freedesktop.org/NetworkManager/NetworkManager/commit/?id=61948913c576b4bf62e33561be06beeec134db47

nm-1-0: http://cgit.freedesktop.org/NetworkManager/NetworkManager/commit/?id=bd5a4c6f6a1e87b3404c22050361f0ce876f9843


Thank you.


Does it actually work on centos6?
Note, that these older systems might not get much testing with recent NetworkManager, so consider yourself as one of the brave :)
Comment 2 Glenn Washburn 2015-11-24 19:48:44 UTC
I'm using NM with a 3.19 kernel on centos6, so I'm sure that helps.  But yes, these changes do work for me. Thanks!