build: add backward compatibility define for missing CLOCK_BOOTTIME

[thaller@redhat.com: modified original patch]

https://bugzilla.gnome.org/show_bug.cgi?id=757911