src/tests/test-general-with-expect.c
@@ -22,6 +22,7 @@
 
 #include <string.h>
 #include <errno.h>
+#include <time.h>
 #include <netinet/ether.h>
 #include <sys/types.h>
 #include <sys/wait.h>
@@ -31,6 +32,10 @@
 #include "nm-multi-index.h"
 
 #include "nm-test-utils.h"
+
+#ifndef CLOCK_BOOTTIME
+#define CLOCK_BOOTTIME 7
+#endif
 
 /*******************************************/
 
